--- a/src/app/main/statistical-post/statistical-post.component.html
+++ b/src/app/main/statistical-post/statistical-post.component.html
@@ -17,7 +17,7 @@
           <span class="info-box-icon bg-aqua"><i class="ion ion-ios-gear-outline"></i></span>
     
           <div class="info-box-content">
-            <span class="info-box-text">Doanh thu tháng <br> {{thang}}</span><br>
+            <span class="info-box-text">Doanh thu bài đăng tháng {{thang}}</span><br>
             <span class="info-text">{{totalpay}}</span>
             
           </div>
