--- a/src/app/main/news/news.component.html
+++ b/src/app/main/news/news.component.html
@@ -1,1 +1,51 @@
-<p>news works!</p>
+<div class="top">
+    <h2>Danh sách tin tức</h2>
+    <div class="right">
+        <button class="btnX" pButton type="button" (click)="showDialog()" label="Thêm"></button>
+        
+    </div>
+</div>
+<div class="bot">
+    <table class="table table-hover">
+        <thead>
+            <th>STT</th>
+            <th>Mã tin tức</th>
+            <th>Nội dung</th>
+        </thead>
+        <tbody>
+            <!-- <tr *ngFor="let item of user, index as i">
+                <td style="text-align: center;">{{i+1}}</td>
+                <td style="text-align: center;">{{item.maTk}}</td>
+                <td>{{item.hoTen}}</td>
+                <td>{{item.diaChi}}</td>
+                <td style="text-align: center;">{{item.sdt}}</td>
+                <td>{{item.email}}</td>
+                <td style="text-align: center;" *ngIf="item.trangThai==0"><i class="fa fa-lock" aria-hidden="true" (click)="change(item.maTk)"
+                        title="Khóa tài khoản"></i></td>
+                <td style="text-align: center;" *ngIf="item.trangThai==1"><i class="fa fa-unlock" aria-hidden="true" (click)="change(item.maTk)"
+                        title="Mở khóa tài khoản"></i></td>
+            </tr> -->
+        </tbody>
+    </table>
+</div>
+<p-dialog [(visible)]="display" [style]="{width: '60vw'}" [dismissableMask]="true" [modal]="true">
+    <ng-template pTemplate="header">
+        <h3>Thêm tin tức mới</h3>
+    </ng-template>
+    <div style="width: 90%; margin-left: 5%;">
+        <label style="font-weight: bold;">Tiêu đề:</label>
+      <input type="text" class="form-control"  placeholder="Tiêu đề">
+      <label style="font-weight: bold;">Nội dung:</label>
+      <p-editor formControlName="description" [style]="{'height':'320px'}"></p-editor>
+    </div>
+        
+    <p-footer>
+        <button type="submit" class="btn btn-primary waves-effect waves-light mr-2">
+            <i class="mdi mdi-check"></i>
+            Thêm
+          </button>
+        <button type="button" (click)="display = false" class="btn btn-danger waves-effect waves-light"> <i
+            class="mdi mdi-window-close"></i>
+          Huỷ</button>
+    </p-footer>
+</p-dialog>
