--- a/src/app/main/news/news.component.html
+++ b/src/app/main/news/news.component.html
@@ -1,7 +1,7 @@
 <div class="top">
     <h2>Danh sách tin tức</h2>
     <div class="right">
-        <button class="btnX" pButton type="button" (click)="showDialog()" label="Thêm"></button>
+        <button class="btnX" pButton type="button" (click)="showAdd()" label="Thêm"></button>
         
     </div>
 </div>
@@ -10,42 +10,91 @@
         <thead>
             <th>STT</th>
             <th>Mã tin tức</th>
-            <th>Nội dung</th>
+            <th>Tiêu đề</th>
+            <th>Chức năng</th>
         </thead>
         <tbody>
-            <!-- <tr *ngFor="let item of user, index as i">
+            <tr *ngFor="let item of list, index as i">
                 <td style="text-align: center;">{{i+1}}</td>
-                <td style="text-align: center;">{{item.maTk}}</td>
-                <td>{{item.hoTen}}</td>
-                <td>{{item.diaChi}}</td>
-                <td style="text-align: center;">{{item.sdt}}</td>
-                <td>{{item.email}}</td>
-                <td style="text-align: center;" *ngIf="item.trangThai==0"><i class="fa fa-lock" aria-hidden="true" (click)="change(item.maTk)"
-                        title="Khóa tài khoản"></i></td>
-                <td style="text-align: center;" *ngIf="item.trangThai==1"><i class="fa fa-unlock" aria-hidden="true" (click)="change(item.maTk)"
-                        title="Mở khóa tài khoản"></i></td>
-            </tr> -->
+                <td style="text-align: center;">{{item.maTinTuc}}</td>
+                <td>{{item.tieuDe}}</td>
+                <td  style="text-align: center;">
+                    <button pButton type="button" title="Xem" (click)="View(item.maTinTuc)" class="p-button-success"><i class="fas fa-eye"></i></button>
+                    <button pButton type="button" title="Sửa" (click)="Edit(item.maTinTuc)" class="p-button-secondary"><i class="fas fa-edit"></i></button>
+                    <button pButton type="button" title="Xóa" (click)="delete(item.maTinTuc)" class="p-button-danger"><i class="fas fa-trash"></i></button>
+                </td>
+            </tr>
         </tbody>
     </table>
+    <div style="position: relative;margin-left: 40%;">
+        <ngb-pagination [collectionSize]="total" [pageSize]="10" [(page)]="page" [maxSize]="3" [rotate]="true"
+            (pageChange)="loadPage($event)">
+        </ngb-pagination>
+    </div>
 </div>
-<p-dialog [(visible)]="display" [style]="{width: '60vw'}" [dismissableMask]="true" [modal]="true">
+<!-- Add -->
+<p-dialog [(visible)]="displayAdd" [style]="{width: '60vw'}" [dismissableMask]="true" [modal]="true">
     <ng-template pTemplate="header">
         <h3>Thêm tin tức mới</h3>
     </ng-template>
     <div style="width: 90%; margin-left: 5%;">
         <label style="font-weight: bold;">Tiêu đề:</label>
-      <input type="text" class="form-control"  placeholder="Tiêu đề">
+      <input type="text" [(ngModel)]="tieude" class="form-control"  placeholder="Tiêu đề">
       <label style="font-weight: bold;">Nội dung:</label>
-      <p-editor formControlName="description" [style]="{'height':'320px'}"></p-editor>
+      <p-editor [(ngModel)]="text" [style]="{'height':'320px'}"></p-editor>
     </div>
         
     <p-footer>
-        <button type="submit" class="btn btn-primary waves-effect waves-light mr-2">
+        <button type="submit" (click)="add()" class="btn btn-primary waves-effect waves-light mr-2">
             <i class="mdi mdi-check"></i>
             Thêm
           </button>
-        <button type="button" (click)="display = false" class="btn btn-danger waves-effect waves-light"> <i
+        <button type="button" (click)="displayAdd = false" class="btn btn-danger waves-effect waves-light"> <i
             class="mdi mdi-window-close"></i>
           Huỷ</button>
     </p-footer>
 </p-dialog>
+<!-- View -->
+<p-dialog [(visible)]="displayView" [style]="{width: '60vw'}" [modal]="true">
+    <ng-template pTemplate="header">
+        <h3></h3>
+    </ng-template>
+        <h1 *ngIf="displayView == true">{{detail.tieuDe}}</h1>
+        <div style="max-width: 100%; z-index: 9999;" [innerHTML]="detail.noiDung" *ngIf="displayView == true"></div>
+    <p-footer>
+        <button type="button" (click)="displayView = false" class="btn btn-danger waves-effect waves-light"> <i
+            class="mdi mdi-window-close"></i>
+          Đóng</button>
+    </p-footer>
+</p-dialog>
+<!-- Edit -->
+<p-dialog [(visible)]="displayEdit" [style]="{width: '60vw'}" [dismissableMask]="true" [modal]="true">
+    <ng-template pTemplate="header">
+        <h3>Câp nhật tin tức</h3>
+    </ng-template>
+    <div style="width: 90%; margin-left: 5%;">
+        <label style="font-weight: bold;">Tiêu đề:</label>
+      <input type="text" [(ngModel)]="tieude" class="form-control"  placeholder="Tiêu đề">
+      <label style="font-weight: bold;">Nội dung:</label>
+      <p-editor [(ngModel)]="text" [style]="{'height':'320px'}"></p-editor>
+    </div>
+        
+    <p-footer>
+        <button type="submit" (click)="save(detail.maTinTuc)" class="btn btn-primary waves-effect waves-light mr-2">
+            <i class="mdi mdi-check"></i>
+            Cập nhật
+          </button>
+        <button type="button" (click)="displayAdd = false" class="btn btn-danger waves-effect waves-light"> <i
+            class="mdi mdi-window-close"></i>
+          Huỷ</button>
+    </p-footer>
+</p-dialog>
+<!-- Confirm -->
+<p-confirmDialog #cd [style]="{width: '50vw'}" [baseZIndex]="10000" icon="pi pi-exclamation-triangle">
+    <p-footer>
+      <button type="button" (click)="cd.accept()" class="btn btn-primary waves-effect waves-light"> <i
+          class="mdi mdi-check"></i> Xoá</button>
+      <button type="button" (click)="cd.hide()" class="btn btn-danger waves-effect waves-light"> <i
+          class="mdi mdi-close"></i> Huỷ</button>
+    </p-footer>
+  </p-confirmDialog>
