--- a/src/app/main/news/news.component.html
+++ b/src/app/main/news/news.component.html
@@ -84,7 +84,7 @@
             <i class="mdi mdi-check"></i>
             Cập nhật
           </button>
-        <button type="button" (click)="displayAdd = false" class="btn btn-danger waves-effect waves-light"> <i
+        <button type="button" (click)="displayEdit = false" class="btn btn-danger waves-effect waves-light"> <i
             class="mdi mdi-window-close"></i>
           Huỷ</button>
     </p-footer>
